--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "SESSION_ID": {
       "description": "Put the session-id here.",
       "required": true,
-      "value": "SHABAN-MD~uMVUwIjI#jKpiethVDp3vo7Io0-5DDNDUCVKrqxIppKeIz8HeXtk"
+      "value": "SHABAN-MD~CM1VkQ7D#XcXZlOuRV7UAi3PR36LUvrQ3NFJAuxZ26CDzub_9EwQ"
     },  
     
     "STICKER_NAME": {
